<resources>
    <string name="app_name">Some App</string>
    <string name="google_place_key">AIzaSyDStvbTtHjGcHsWgtsPFU6kE-wLtCcR5Kc</string>
    <string name="facebook_app_id">2959577400930680</string>
    <string name="fb_login_protocol_scheme">fb2959577400930680</string>
    <string name="facebook_client_token">aefa96af0837857d56d63f7dbee9522c</string>
    <string name="banner_app_id">ca-app-pub-4580417451589999~7705951588</string>
    <string name="ad_unit_id">ca-app-pub-4580417451589999/6919214027</string>
    <string name="ok_message">OK</string>
    <string name="error_text">Error</string>
    <string name="check_internet_connection">The internet connection appears to be offline. Please check your internet connection.</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="something_wrong">Something went wrong, Please try again later.</string>
    <string name="invalid_url">Invalid Url!</string>
    <string name="unAuthorized_access">Your session has expired! Login again to continue.</string>
    <string name="please_choose_30_sec_less_or_equal_videos">Please choose 30 sec less or equal videos</string>
    <string name="blur_the_video">Blur the video.</string>
    <string name="please_choose_video_minimum_of_30_sec_duration">Please choose video minimum of 30 sec duration.</string>
    <string name="choose_video">Choose Video</string>
    <string name="please_wait_patiently">Please wait patiently…\n %1$d %2$s</string>
    <string name="blur_percentage">Blur Percentage : %d%%</string>
    <string name="please_wait_patiently_only">Please wait patiently…</string>
    <string name="file_saved_path">\"File saved path :- \"</string>
    <string name="done_next">Done!\n</string>
    <string name="failed_reason">\"Failed Reason :- \"</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="rec_size_is_too_much_large">Rec size is too much large</string>
    <string name="what_s_it_called">WHAT\'S IT CALLED?</string>
    <string name="that_dating_app">THAT DATING APP</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="i_am_gender">I am (Gender)</string>
    <string name="next">Next</string>
    <string name="questions">Questions</string>
    <string name="please_answer_minimum_of_5_question">Please answer minimum of 5 question.</string>
    <string name="skip">Skip</string>
    <string name="logout">Logout</string>
    <string name="conversation">Conversation</string>
    <string name="start_typing">Type message here</string>
    <string name="record_bio">Record Bio</string>
    <string name="continue_with">Continue with</string>
    <string name="preferences">Preferences</string>
    <string name="basic_info">Basic info</string>
    <string name="other_info">Other info</string>
    <string name="looking_for_height">Looking for (Height)</string>
    <string name="looking_for_weight">Looking for (Weight)</string>
    <string name="looking_for_age">Looking for (Age)</string>
    <string name="looking_for_gender">Looking for (Gender)</string>
    <string name="looking_for_ethnicity">Looking for (Ethnicity)</string>
    <string name="i_am_age">I am (Age)</string>
    <string name="i_am">I am (Ethnicity)</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="i_am_looking_for">I am Looking for</string>
    <string name="info_window_data">Please answer minimum of 5 questions. These questions will be seen on your profile by all other users.</string>
    <string name="save_next"><![CDATA[Save & Next]]></string>
    <string name="back">Back</string>
    <string name="type_here">Type here…</string>
    <string name="recording_bio">Recording bio</string>
    <string name="info_windoe_second">You need to record a 15–30 second video of yourself explaining what you like people to know about yourself.</string>
    <string name="start_recording">Start Recording</string>
    <string name="preview_bio_video">Preview bio video</string>
    <string name="so_go_pop_some_bubbles">So go pop some bubbles!</string>
    <string name="possibilities">Possibilities</string>
    <string name="singles">Singles</string>
    <string name="out_and_about">Out &amp; About</string>
    <string name="frame_rate_value_with_unit">%d fps</string>
    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="blind_date">Blind Date</string>
    <string name="profile">Profile</string>
    <string name="travel">Travel</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send_otp">Send OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="send_new_password">Send New Password</string>
    <string name="send">Send</string>
    <string name="dismiss">Dismiss</string>
    <string name="set_video_blurriness">Set video blurriness</string>
    <string name="cancel">Cancel</string>
    <string name="save_upload"><![CDATA[Save & Upload]]></string>
    <string name="age">Age</string>
    <string name="height">height</string>
    <string name="weight">Weight</string>
    <string name="_4_new_users_are_in_nyour_area">4 new users are in\nyour area.</string>
    <string name="set_a_blind_date_with">Set a blind date with</string>
    <string name="location">My Location</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_email">Enter email</string>
    <string name="or_text">OR</string>
    <string name="submit_request">Submit Request</string>
    <string name="set_person_blind_date_txt">Do you want to set this person on a blind date?</string>
    <string name="request_sent">Request sent</string>
    <string name="request_accepted">Request Accepted</string>
    <string name="request_rejected">Request Rejected</string>
    <string name="request_sent_text">A blind date request has been submitted</string>
    <string name="sent_continue">Sent! Continue To App</string>
    <string name="its_a_match">It\'s a match!</string>
    <string name="match_text">You and Jully like each other</string>
    <string name="go_to_profile">Go To Profile</string>
    <string name="back_to_home">Back to Home</string>
    <string name="you">You</string>
    <string name="you_have_logged_on_2_day_s_ina_row_none_more_day_you_get_a_free_nsneak_peak">You have logged on 2 day\'s ina row\nOne more day &amp; you get a free\nSneak Peak</string>
    <string name="your_unblur_request_has_nbeen_sent">Your unblur request has\nbeen sent!</string>
    <string name="matches_tag">Matches</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="otp">OTP</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_your_nverification_code">Enter your\nverification code</string>
    <string name="success">Success</string>
    <string name="we_have_sent_a_password_reset_ninstructions_to_your_email">We have sent a password reset\ninstructions to your email.</string>
    <string name="verify">Verify</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="max_five_pics">You can add maximum of 5 pictures.</string>
    <string name="check_more_info">Check More Info</string>
    <string name="_00_00">00:00</string>
    <string name="q">Q. </string>
    <string name="qs">Q</string>
    <string name="dot">.</string>
    <string name="a">A. </string>
    <string name="ques_5">Which is one of your biggest pet peeves?</string>
    <string name="ans_5">Folding laundry</string>
    <string name="how_are_you">How are you Mohit?</string>
    <string name="type_msg_here">Type message here</string>
    <string name="image_view">Image View</string>
    <string name="questions_5">Question - 5</string>
    <string name="view_all">View all</string>
    <string name="choose_gender">Choose the Gender</string>
    <string name="choose_height">Choose the Height</string>
    <string name="choose_weight">Choose the Weight</string>
    <string name="choose_age">Choose the Age</string>
    <string name="height_hint">I am (Height in Foot and Inches)</string>
    <string name="weight_hint">Weight (Pounds)</string>
    <string name="age_hint">I am (age)</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="choose_ethnicity">Choose the Ethnicity</string>
    <string name="gender">Gender</string>
    <string name="un_match">Unmatch</string>
    <string name="chat">Chat</string>
    <string name="ask_for_unblur">Ask for unblur</string>
    <string name="blind_dates">Blind Dates</string>
    <string name="please_enter_email_address">Please enter email address</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="please_enter_password_length">Password length should be greater than 8 characters.</string>
    <string name="old_password_length_msg">Old Password length should be greater than 8 characters.</string>
    <string name="new_password_length_msg">New Password length should be greater than 8 characters.</string>
    <string name="name_validation">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_here">Enter here…</string>
    <string name="select_answer">Select Answer</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="plus">PLUS</string>
    <string name="one_month">$64.00</string>
    <string name="one_month_txt">1 month</string>
    <string name="no_ads">No ads</string>
    <string name="multiple_pic">Upload multiple pics</string>
    <string name="view_matches">View matches</string>
    <string name="see_other_user_all_pic">See all pics from other users</string>
    <string name="see_other_user_full_profile">See other user\'s full profile</string>
    <string name="read_receipts">Read receipts</string>
    <string name="see_other_user_star_rating">See other user\'s star rating</string>
    <string name="read_other_user_reviews">Read other user\'s reviews</string>
    <string name="rate_your_chats">Rate your chats (after chatting for a bit)</string>
    <string name="rate_your_dates">Rate your dates (when you date your matches)</string>
    <string name="leave_user_reviews">Leave user reviews</string>
    <string name="chat_with_other_users">Chat with other users</string>
    <string name="can_filter_by_age_gender_pronoun_height_weight_ethnicity_and_role_top_bottom_vers">Can filter by age, gender, pronoun, height, weight, ethnicity, and role (top, bottom, vers)</string>
    <string name="create_full_profile">Create your full profile</string>
    <string name="subscribe_txt">Subscribe</string>
    <string name="subscribe_upgrade">Upgrade</string>
    <string name="subscribe_cancel">Cancel</string>
    <string name="expiration_date">Expiration Date : %s</string>
    <string name="subscribed">Subscribed</string>
</resources>