<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeTv"
        android:checked="true"
        android:enabled="true"
        android:icon="@drawable/home_selected"
        android:title="@string/home" />
    <item
        android:id="@+id/chat"
        android:enabled="true"
        android:icon="@drawable/chat_unselected"
        android:title="@string/chat" />
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/profile_unselected"
        android:title="@string/profile" />
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/setting_unselected"
        android:title="@string/settings" />

</menu>