<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragment.subscriptions.SubscriptionFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/buy_btn"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/round_corner_light_black_bg"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/colorChangeLL"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_round_white_bg"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/plus"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:gravity="center"
                    android:text="@string/one_month"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

                <!--                <androidx.appcompat.widget.AppCompatTextView-->
                <!--                    android:id="@+id/titleTV"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_gravity="center_horizontal"-->
                <!--                    android:layout_marginTop="@dimen/_6sdp"-->
                <!--                    android:background="@drawable/radius_4_back_white"-->
                <!--                    android:gravity="center"-->
                <!--                    android:visibility="visible"-->
                <!--                    android:paddingStart="@dimen/_12sdp"-->
                <!--                    android:paddingTop="@dimen/_6sdp"-->
                <!--                    android:paddingEnd="@dimen/_12sdp"-->
                <!--                    android:paddingBottom="@dimen/_6sdp"-->
                <!--                    android:text="@string/one_month_txt"-->
                <!--                    android:textColor="@color/black"-->
                <!--                    android:textSize="@dimen/_12ssp" />-->


                <LinearLayout
                    android:id="@+id/layoutUpdateCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/upgrade_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/radius_4_red"
                        android:fontFamily="@font/avenir"
                        android:text="@string/subscribe_upgrade"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15ssp" />

                    <Button
                        android:id="@+id/cancel_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/radius_4_red"
                        android:fontFamily="@font/avenir"
                        android:text="@string/subscribe_cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15ssp" />

                </LinearLayout>

                <com.skydoves.powerspinner.PowerSpinnerView
                    android:id="@+id/skuSpinner"
                    style="@style/spinnerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/radius_4_red"
                    android:gravity="start"
                    android:hint="@string/one_month_txt"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_4sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:spinner_arrow_tint="@color/white"
                    app:spinner_item_array="@array/subscriptionList"
                    app:spinner_popup_animation="bounce"
                    app:spinner_popup_background="@color/colorGrey"
                    app:spinner_popup_elevation="@dimen/_14sdp"
                    app:spinner_popup_height="@dimen/_100sdp" />

                <TextView
                    android:id="@+id/tv_plan_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/radius_4_red"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_4sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    tools:text="1 month" />

                <TextView
                    android:id="@+id/tv_plan_expiration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/expiration_date"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    tools:text="1 month" />

                <TextView
                    android:id="@+id/tv_subscribed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:gravity="center"
                    android:text="@string/subscribed"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:text="@string/subscribed" />

            </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_16sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/check_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:text="@string/create_full_profile"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableStart="@drawable/check_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:text="@string/can_filter_by_age_gender_pronoun_height_weight_ethnicity_and_role_top_bottom_vers"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableStart="@drawable/check_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:text="@string/multiple_pic"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableStart="@drawable/check_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:text="@string/view_matches"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableStart="@drawable/check_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:text="@string/see_other_user_all_pic"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableStart="@drawable/check_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:text="@string/see_other_user_full_profile"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableStart="@drawable/check_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:text="@string/chat_with_other_users"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableStart="@drawable/check_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:text="@string/see_other_user_star_rating"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableStart="@drawable/check_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:text="@string/read_other_user_reviews"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableStart="@drawable/check_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:text="@string/rate_your_chats"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableStart="@drawable/check_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:text="@string/rate_your_dates"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableStart="@drawable/check_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:text="@string/leave_user_reviews"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableStart="@drawable/check_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:text="@string/read_receipts"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableStart="@drawable/check_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:text="@string/no_ads"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />


                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

        <Button
            android:id="@+id/buy_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/red_button_bg"
            android:fontFamily="@font/avenir"
            android:text="@string/subscribe_txt"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>

</layout>