<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/nestedRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:background="@color/black">

        <TextView
            android:id="@+id/nestedQuestionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="Do you have children ?"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <ImageView
            android:id="@+id/infoIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/info"
            android:visibility="gone" />

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/nestedSpinner"

            style="@style/spinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nestedQuestionTV"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:gravity="start"
            android:hint="@string/select_answer"
            android:paddingHorizontal="@dimen/_8sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:visibility="visible"
            app:spinner_popup_background="@color/colorLightBlack"
            app:spinner_popup_elevation="@dimen/_14sdp" />

        <EditText
            android:id="@+id/nestedAnswerET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nestedQuestionTV"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:autofillHints="@string/enter_name"
            android:background="@null"
            android:digits="@string/name_validation"
            android:hint="@string/enter_here"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:paddingVertical="@dimen/_8sdp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/hintTextColor"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone" />

        <View
            android:id="@+id/dividerView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/nestedQuestionTV"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@color/colorGrey" />
    </RelativeLayout>
</layout>